--- a/src/app/products/view-all-product/view-all-product.component.html
+++ b/src/app/products/view-all-product/view-all-product.component.html
@@ -25,7 +25,7 @@
             </div>
           </div>
           <div class="card-footer p-4 pt-0 border-top-0 bg-transparent">
-            <div class="text-center"><a class="btn btn-outline-dark mt-auto" routerLink="view-product/{{products.id}}">View options</a></div>
+            <div class="text-center"><a class="btn btn-outline-dark mt-auto" routerLink="view-product/{{products.id}}">View product</a></div>
           </div>
         </div>
       </div>
