--- a/src/app/site-layout/header/header.component.html
+++ b/src/app/site-layout/header/header.component.html
@@ -10,8 +10,8 @@
     </ul>
     <form class="d-flex px-4">
       <ul class="navbar-nav me-auto mb-2 mb-lg-0 ms-lg-4">
-        <li class="nav-item login"><strong><a class="nav-link active" aria-current="page" href="login">LOGIN</a></strong></li>
-        <li class="nav-item"><strong><a class="nav-link" href="signup">/ SIGNUP</a></strong></li>
+        <li class="nav-item login"><strong><a class="nav-link active" aria-current="page" href="products/loginPage">LOGIN</a></strong></li>
+        <li class="nav-item"><strong><a class="nav-link" href="products/signupPage">/ SIGNUP</a></strong></li>
         <a href="products/add-product"><button type="button" class="btn btn-outline-success">Add Product</button></a>
 
       </ul>
