responsive/media queries

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,5 +1,5 @@
 <div id="carouselExampleSlidesOnly" class="carousel slide" data-bs-ride="carousel">
-  <div class="carousel-inner">
+  <div class="carousel-inner col-md-4">
     <div class="carousel-item active">
       <a href="products"><img src="https://peterengland.imgix.net/img/app/shopmedia/production/5/5-20-6245.jpg?w=1000&auto=format" class="d-block w-100" alt="..."></a>
     </div>
@@ -13,12 +13,18 @@
 </div>
 
 <h1 class="head">VIDEOS</h1><br>
+<div class="videos row">
+  <div class="col-lg-4 col-md-6">
+      <iframe width="360" height="215" src="https://www.youtube.com/embed/7C6EOzJKHlI" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+  </div>
+  <div class="col-lg-4 col-md-6">
+    <iframe width="360" height="215" src="https://www.youtube.com/embed/MOxg1UojFT4" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+  </div>
+  <div class="col-lg-4 col-md-6">
+    <iframe width="360" height="215" src="https://www.youtube.com/embed/iLkFY5lxKNk" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+  </div>
 
 
-<div class="videos">
-  <iframe width="360" height="215" src="https://www.youtube.com/embed/7C6EOzJKHlI" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-  <iframe width="360" height="215" src="https://www.youtube.com/embed/MOxg1UojFT4" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-  <iframe width="360" height="215" src="https://www.youtube.com/embed/iLkFY5lxKNk" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 </div><br><br>
 
   <div class="maps">
