--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -13,6 +13,7 @@ iframe{
 .videos,.maps,.style-text{
   display: flex;
   justify-content: center;
+  margin: 0 auto;
 }
 .head{
   color:#08233E;
@@ -25,4 +26,20 @@ iframe{
   margin: 0 auto;
   color: #A69999;
   font-size: 1rem;
+}
+
+@media only screen and (max-width: 1200px) {
+  .carousel-item {
+    height: 400px;
+    margin-bottom: 2rem;
+  }
+}
+@media only screen and (max-width: 769px) {
+  .videos{
+    width: 50%;
+  }
+  .carousel-item {
+    height: 260px;
+    margin-bottom: 2rem;
+  }
 }
