--- a/src/app/products/signup/signup.component.html
+++ b/src/app/products/signup/signup.component.html
@@ -5,7 +5,7 @@
 
 <div class="container">
     <div class="row">
-        <div class="col-md-6">
+        <div class="col-md-6 col-lg-6 col-sm-2">
             <div class="card">
                 <div class="text-center">
                     <h1>Sign up</h1>
