--- a/src/app/site-layout/footer/footer.component.html
+++ b/src/app/site-layout/footer/footer.component.html
@@ -1,9 +1,9 @@
 <!-- Footer-->
 <footer id="footer">
 
-  <a href="https://twitter.com"><i class="social-icons fab fa-twitter"></i></a>
-  <a href="https://en.wikipedia.org/wiki/Facebook"><i class="social-icons fab fa-facebook-f"></i></a>
-  <a href="https://www.instagram.com/"><i class="social-icons fab fa-instagram"></i></a>
+  <a href="https://twitter.com/PeterEngland_"><i class="social-icons fab fa-twitter"></i></a>
+  <a href="https://www.facebook.com/peterenglandofficial"><i class="social-icons fab fa-facebook-f"></i></a>
+  <a href="https://www.instagram.com/peterengland"><i class="social-icons fab fa-instagram"></i></a>
   <a href="mailto:jasmeetmatta2@gmail.com"><i class="social-icons fas fa-envelope"></i></a>
   <p class="footer-p">© Copyright 2021 Peter England</p>
 
