--- a/src/app/products/view-all-product/view-all-product.component.css
+++ b/src/app/products/view-all-product/view-all-product.component.css
@@ -16,3 +16,12 @@ background: -webkit-linear-gradient(90deg, #00C9FF 0%, #92FE9D 100%);
 -webkit-background-clip: text;
 -webkit-text-fill-color: transparent;
 }
+
+img:hover{
+  filter: saturate(1.5);
+  cursor: pointer;
+}
+
+.card{
+
+}
